--- a/package.json
+++ b/package.json
@@ -13,19 +13,26 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "chalk": "^1.1.3",
+    "css-loader": "^0.23.1",
     "eslint": "^3.0.1",
     "eslint-config-standard": "^5.3.5",
     "eslint-loader": "^1.4.1",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^2.0.0",
+    "file-loader": "^0.9.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-load-plugins": "^1.2.4",
     "gulp-nodemon": "^2.1.0",
     "gulp-util": "^3.0.7",
+    "node-sass": "^3.8.0",
     "rimraf": "^2.5.3",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
   },
   "dependencies": {
+    "jquery": "^3.1.0",
     "source-map-support": "^0.4.1"
   }
 }
