--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-loader": "^1.4.1",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^2.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-load-plugins": "^1.2.4",
