--- a/package.json
+++ b/package.json
@@ -30,10 +30,16 @@
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.1"
   },
   "dependencies": {
+    "express": "^4.14.0",
+    "jade": "^1.11.0",
     "jquery": "^3.1.0",
-    "source-map-support": "^0.4.1"
+    "socket.io": "^1.4.8",
+    "source-map-support": "^0.4.1",
+    "webpack-hot-middleware": "^2.12.1"
   }
 }
