--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
   },
   "dependencies": {
     "express": "^4.14.0",
+    "font-awesome": "^4.6.3",
     "jade": "^1.11.0",
     "jquery": "^3.1.0",
+    "rxjs": "^5.0.0-beta.10",
     "socket.io": "^1.4.8",
+    "socket.io-client": "^1.4.8",
     "source-map-support": "^0.4.1",
     "webpack-hot-middleware": "^2.12.1"
   }
