--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "rxjs": "^5.0.0-beta.10",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
-    "source-map-support": "^0.4.1",
-    "webpack-hot-middleware": "^2.12.1"
+    "source-map-support": "^0.4.1"
   }
 }
