changed npm script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "./node_modules/.bin/gulp prod",
     "start": "node build/server"
   },
   "author": "",
