--- a/package.json
+++ b/package.json
@@ -36,15 +36,6 @@
     "webpack-hot-middleware": "^2.12.1"
   },
   "dependencies": {
-    "express": "^4.14.0",
-    "font-awesome": "^4.6.3",
-    "jade": "^1.11.0",
-    "jquery": "^3.1.0",
-    "moment": "^2.14.1",
-    "rxjs": "^5.0.0-beta.10",
-    "socket.io": "^1.4.8",
-    "socket.io-client": "^1.4.8",
-    "source-map-support": "^0.4.1",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
@@ -55,15 +46,25 @@
     "eslint-loader": "^1.4.1",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^2.0.0",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "font-awesome": "^4.6.3",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-load-plugins": "^1.2.4",
     "gulp-nodemon": "^2.1.0",
     "gulp-util": "^3.0.7",
+    "jade": "^1.11.0",
+    "jquery": "^3.1.0",
+    "moment": "^2.14.1",
+    "moment-duration-format": "^1.3.0",
     "node-sass": "^3.8.0",
     "rimraf": "^2.5.3",
+    "rxjs": "^5.0.0-beta.10",
     "sass-loader": "^4.0.0",
+    "socket.io": "^1.4.8",
+    "socket.io-client": "^1.4.8",
+    "source-map-support": "^0.4.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
